welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:46: error: type mismatch;
 found   : java.awt.Color
 required: Int
  	setCouleurBrosse(T(i))
                           ^